@@ -1,3 +1,10 @@
+September 24, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * Fixed filenames with spaces when loading .toc file (Thanks dario86). Force
+   byteswap if .toc file is loaded as cdrdao uses Big-Endian for CD Audio.
+   Fixed skipping of the first 2 seconds when playing CDDA Track #2. Check
+   for image.toc if image.toc.bin is loaded.
+
 September 22, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * win32/gui/CheatDlg.c: Always enable the value inputbox when "New Search" is
